--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # REQUIRED CHANGES
 # Edit next line to provide your own name.
-title: Emilio Rojas | Professional Portfolio
+title: Emilio Rojas Baez | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
 url: "https://Emi-debug.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
